--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
+
+
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="utf-8">
+<title>aankka90</title>
+  
 <meta name="viewport" content="width=device-width,user-scalable=1,interactive-widget=overlays-content">
 <meta http-equiv="Content-Security-Policy" content="default-src 'self';object-src 'none';base-uri 'none';">
-<title>aankka90</title>
+
+<link rel="stylesheet" href="index.css">
+<script type="module" src="index.js" defer></script>
 </head>
 <body>
-<h1>Hello aankka90</h1>
-
+<main>
+  <section id="editor">
+    <textarea></textarea>
+    <div role="group">
+    </div>
+  </section>
+  <section id="output">
+    <pre></pre>
+  </section>
+  <section id="console">
+    <ul></ul>
+  </section>
+</main>
 </body>
 </html>
