--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <section id="editor">
     <textarea></textarea>
     <div role="group">
+      <button onclick="run_code()">Run</button>
     </div>
   </section>
   <section id="output">
