--- a/test.html
+++ b/test.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <title>test page</title>
+
+  <link rel="stylesheet" href="test.css">
+
 </head>
 <body>
-<h1>test page here</h1>
+  <h1>test page here</h1>
+
+  <script type="module" src="test.js"></script>
 </body>
 </html>
