--- a/links/index.html
+++ b/links/index.html
@@ -6,32 +6,18 @@
 <title>aankka90 links</title>
 </head>
 <body>
-<script>
-const data = `
-https://shinv.pics/posts/0625e942cf04051df889142311539d02/
-https://shinv.pics/posts/3991c26e34b847221156980455783e8c/
-https://shinv.pics/posts/7736ed25b5de2815e0b9a2fc3ee35c1c/
-https://shinv.pics/posts/715c86a19927ab7b1c679ccc29f48e6b/
-https://shinv.pics/posts/d35e0c1eb60ff18698e250daa0909d78/
-https://shinv.pics/posts/d0690fe57c7906f3a493466bc77951bb/
-https://shinv.pics/posts/649cff603a4d5a946ddbb07cabf9421a/
-https://shinv.pics/posts/a29ffa89cac889f4eb3203febb23c2e2/
-https://shinv.pics/posts/ef453a59cb057c0c0ed2425c9a8ad666/
-https://shinv.pics/posts/5a808e18256fe12bb6e2d4b4b2a92976/
-https://shinv.pics/posts/3feace399db75963e9a7f0712c612ff3/
-https://shinv.pics/posts/63fd0c72437c95712e83c3f09e3919e9/
-https://shinv.pics/tags/%E5%B0%8F%E9%9D%92%E8%8C%97/
-`
-.trim()
-.split('\n')
-
-const show = data
-.map(s => `<a>${s}</a>`)
-.flat()
-.join('')
-
-document.body.insertAdjacentHTML('beforeend', show)
-
-</script>
+<a href="https://shinv.pics/posts/0625e942cf04051df889142311539d02/">Link</a>
+<a href="https://shinv.pics/posts/3991c26e34b847221156980455783e8c/">Link</a>
+<a href="https://shinv.pics/posts/7736ed25b5de2815e0b9a2fc3ee35c1c/">Link</a>
+<a href="https://shinv.pics/posts/715c86a19927ab7b1c679ccc29f48e6b/">Link</a>
+<a href="https://shinv.pics/posts/d35e0c1eb60ff18698e250daa0909d78/">Link</a>
+<a href="https://shinv.pics/posts/d0690fe57c7906f3a493466bc77951bb/">Link</a>
+<a href="https://shinv.pics/posts/649cff603a4d5a946ddbb07cabf9421a/">Link</a>
+<a href="https://shinv.pics/posts/a29ffa89cac889f4eb3203febb23c2e2/">Link</a>
+<a href="https://shinv.pics/posts/ef453a59cb057c0c0ed2425c9a8ad666/">Link</a>
+<a href="https://shinv.pics/posts/5a808e18256fe12bb6e2d4b4b2a92976/">Link</a>
+<a href="https://shinv.pics/posts/3feace399db75963e9a7f0712c612ff3/">Link</a>
+<a href="https://shinv.pics/posts/63fd0c72437c95712e83c3f09e3919e9/">Link</a>
+<a href="https://shinv.pics/tags/%E5%B0%8F%E9%9D%92%E8%8C%97/">Link</a>
 </body>
 </html>
