--- a/shinv/index.html
+++ b/shinv/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=400">
   <title>Bookmarks</title>
+  
+  <link rel="stylesheet" href="https://unpkg.com/mvp.css">
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 <body>
