--- a/shinv/index.html
+++ b/shinv/index.html
@@ -9,17 +9,23 @@
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 <body>
-<div x-data="{
-  aa: ['foo', 'bar', 'baz'],
-  get filt() {
-    return this.items.map(s => s)
-  }
-}">
-  <ul>
-    <template x-for="s in aa" :key="s">
-      <li x-text="s"></li>
-    </template>
-  </ul>
+
+<div x-data="bookmarks">
+  <template x-for="str in list" :key="str">
+    <p x-text="str"></p>
+  </template>
 </div>
+
+<script>
+document.addEventListener('alpine:init', () => {
+  Alpine.data('bookmarks', () => ({
+    list: [
+      'hello',
+      'x testing',
+      '123',
+    ]
+  }))
+})
+</script>
 </body>
 </html>
