--- a/shinv/index.html
+++ b/shinv/index.html
@@ -6,24 +6,23 @@
   <title>Bookmarks</title>
   
   <link rel="stylesheet" href="mvp.css">
-  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 <body>
 
+<h2>Bookmarks:</h2>
 <div x-data="bookmarks">
-  <template x-for="str in list" :key="str">
-    <p x-text="str"></p>
+  <template x-for="it in list" :key="it.url">
+    <a :href="it.url" x-text="it.title"></a>
   </template>
 </div>
 
-<script>
+<script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+<script type="module">
+import { dataList } from './bookmarkData.js'
+
 document.addEventListener('alpine:init', () => {
   Alpine.data('bookmarks', () => ({
-    list: [
-      'hello',
-      'x testing',
-      '123',
-    ]
+    list: dataList,
   }))
 })
 </script>
