--- a/shinv/index.html
+++ b/shinv/index.html
@@ -6,11 +6,10 @@
   <title>Bookmarks</title>
   
   <link rel="stylesheet" href="mvp.css">
-<script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
 </head>
 <body>
 
-<h2>Bookmarks v2</h2>
+<h2>Bookmarks v3</h2>
 <div x-data="bookmarks">
   <template x-for="it in list" :key="it.url">
     <a :href="it.url" x-text="it.title"></a>
@@ -18,6 +17,7 @@
 </div>
 
 <script type="module">
+import Alpine from './alpine.js'
 import { dataList } from './bookmarkData.js'
 
 alert(JSON.stringify(dataList[0]))
@@ -28,6 +28,8 @@ document.addEventListener('alpine:init', () => {
     list: dataList,
   }))
 })
+
+Alpine.start()
 </script>
 </body>
 </html>
