--- a/shinv/static.html
+++ b/shinv/static.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=400">
+  <title>Bookmarks</title>
+  
+  <link rel="stylesheet" href="mvp.css">
+</head>
+<body>
+
+<h2>Bookmarks v3</h2>
 
 <a href="https://shinv.pics/tags/%E8%B6%8A%E5%8D%97coser/">越南coser - 湿女吧</a>
 <a href="https://shinv.pics/posts/3c1ae7afa2853614e0f84aa9b018822c/">推特福利姬你的欲梦SAMA尺度视图合集2 - 湿女吧</a>
@@ -67,3 +79,6 @@
 <a href="https://shinv.pics/posts/809fd39043bce8c46ad589adeaccab8c/">推特美女@原味岚一私拍尺度合集 - 湿女吧</a>
 <a href="https://shinv.pics/posts/a29687fb3b23bf851861738c3a62aac3/">推特美女枝枳@zhizhiqwq私拍尺度图集 - 湿女吧</a>
 <a href="https://shinv.pics/posts/f089f0538900a88fb488274549c974a8/">爆乳美女居家私拍福利科技成就好身材 - 湿女吧</a>
+
+</body>
+</html>
